# numerical-analysis

./: .gitignore  Dockerfile  Makefile  README.md  pylintrc  pyproject.toml  requirements.txt
.github/: dependabot.yaml
.github/workflows/: pytest.yaml  qft.yaml
CFDPython/: Makefile
algorithms/basics/: 001-recursion.ipynb  Makefile  Understanding-analysis.ipynb
algorithms/video-google/: Dockerfile  Makefile  README.md  main.py  requirements.txt
cython/: .gitignore
cython/cephes/: Makefile  README.md  project.c
cython/mypackage/: Dockerfile  MANIFEST.in  Makefile  README.md  meson.build  pyproject.toml  requirements.txt
cython/mypackage/mypackage/: __init__.py  __main__.py  hello.pyx
env/: .gitignore  README.md  ec2.tf  main.tf  setup.sh.tpl  variables.tf  vpc.tf
hack/: start-jupyter-lab.sh
numa/: equation_solvers.py  equation_systems.py  exceptions.py  horner.py  interpolation.py  remez.py
numa-examples/: dedekin-cuts.ipynb  interpolation.ipynb  matrix-operations.ipynb  remez.ipynb
numerical-methods-differential-equations/: IVPs.ipynb
qft/ising/: .gitignore  Dockerfile  HashTable.cpp  HashTable.h  Ising-model.ipynb  Lattice.cpp  Lattice.h  Makefile  Metropolis.cpp  README.md
qft/ising/data/slowing/: measurements.csv
qft/peskin-schroeder/: Dockerfile  Integrals.ipynb  Makefile
qft/peskin-schroeder/perl-playground/: 00-cmd.pl  01-generate-makefile.pl  02-delete-file.pl  03-read-oi-and-eval.pl
qft/peskin-schroeder/perl-playground/03-tests/: commnds.tex  frames.tex  nums.tex
qft/phi-theory/: .gitignore  Dockerfile  HashTable.cpp  HashTable.h  Lattice.cpp  Lattice.h  Makefile  README.md  Simulation.cpp  lattice-qft.ipynb
qft/random-walks/: .gitignore  Basic2D.cpp  Basic2D.pyx  Basic2D_pythonic.pyx  Dockerfile  Makefile  README.md  RandaomWalks.ipynb  requirements.txt
qft/stat-phase/: .dockerignore  Dockerfile  Dockerfile.dev  Makefile  README.md
qft/stat-phase/stationary-phase/: generateLatex.js  package-lock.json  package.json
qft/stat-phase/stationary-phase/src/app/: page.tsx
qft/stat-phase/stationary-phase/src/components/: StatPhaseViz.tsx
stats/00-discrete-probability-distributions/: README.md  discrete-distributions.ipynb
stats/basics/: 00-baiscs.ipynb  00-covariance.ipynb  00-discrete-distributions.ipynb  01-continuous-distributions.ipynb  02-confidence-intervals.ipynb  03-hypothesis-testing.ipynb  Makefile  generating-random-variables.ipynb  sampling.ipynb
stats/mc-stat-methods/: 01-generating-random-variables.ipynb  02-sampling.ipynb  03-integration.ipynb  Dockerfile  Makefile  requirements.txt
tests/: eq_solvers_test.py  eq_systems_test.py  horner_test.py  interpolation_test.py
