[tool.poetry]
name = "numerical-analysis"
version = "0.1.0"
description = ""
authors = ["seafoodfry <99568361+seafoodfry@users.noreply.github.com>"]
readme = "README.md"

packages = [
    { include = "numa" },
]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.2"
scipy = "^1.15.1"
matplotlib = "^3.10.0"
jupyterlab = "^4.4.1"
mpmath = "^1.3.0"
rich = "^13.9.4"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
memory-profiler = "^0.61.0"
cython = "^3.0.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
