[project]
name = "numerical-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.5",
]

[tool.setuptools]
packages = ["numa"]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.2",
    "matplotlib>=3.10.3",
    "mpmath>=1.3.0",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "rich>=14.0.0",
    "ruff>=0.11.9",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
]
